display is starting to work again most of the connections have been made

--- a/services/cabinet/public/html/templates/room/body.html
+++ b/services/cabinet/public/html/templates/room/body.html
@@ -2,5 +2,5 @@
   <select>
     <option:t repeat='type in propertyTypes'>{{type}}</option:t>
   </select>
-  <div class='cabinet-cnt' room-id='{{room.id}}'></div>
+  <div class='cabinet-cnt' room-id='{{room.id()}}'></div>
 </div>
