--- a/public/html/templates/input/select.html
+++ b/public/html/templates/input/select.html
@@ -1,10 +1,10 @@
 <div class='input-cnt'{{hidden() ? ' hidden' : ''}}>
-  <label>{{label}}</label>
-  <select class='{{class}}' id='{{id}}' name='{{name}}' value='{{value()}}'>
-    <option:t repeat='key, value in list' value='{{isArray() ? value : key}}'
+  <label>{{label()}}</label>
+  <select class='{{class()}}' id='{{id()}}' name='{{name()}}' value='{{value()}}'>
+    <option:t repeat='value in list()' value='{{isArray() ? value : key}}'
         {{selected(item) ? 'selected' : ''}}>
       {{value}}
     </option:t>
   </select>
-  <div class='error' id='{{errorMsgId}}'>{{errorMsg}}</div>
+  <div class='error' id='{{errorMsgId()}}'>{{errorMsg()}}</div>
 </div>
