--- a/services/cabinet/public/html/templates/properties/properties.html
+++ b/services/cabinet/public/html/templates/properties/properties.html
@@ -6,23 +6,10 @@
     </div>
     <div{{key ? ' hidden' : ''}}>
       <div{{branch ? ' hidden' : ''}}>
-        <div:t class='property-cnt' repeat='property in properties'>
-          <label>{{property.name()}}</label>
-          <input type="text" prop-update='{{property.id()}}:{{property.code()}}' name="{{key}}" value="{{property.value()}}">
-        </div:t>
+        <div id='config-expand-list-{{uniqueId}}'></div>
         <div:t repeat='key, group in groups'>
           {{recurse(key, group)}}
         </div:t>
-      </div>
-      <div{{!branch ? ' hidden' : ''}}>
-        <select name="property-branch-selector" prop-update='{{0}}:_SELECTED' value="{{_SELECTED}}">
-          <option:t  repeat='key, group in groups'{{key === _SELECTED ? ' selected' : ''}} value='{{$index}}'>{{key}}</option:t>
-        </select>
-        <div>
-          <div:t repeat='key, group in groups'{{key === _SELECTED ? '' : ' hidden'}}>
-            {{recurse(undefined, group)}}
-          </div:t>
-        </div>
       </div>
     </div>
   </div>
