--- a/services/cabinet/public/html/templates/managers/cost/cost-head.html
+++ b/services/cabinet/public/html/templates/managers/cost/cost-head.html
@@ -1,3 +1,8 @@
 <b>
-  {{id()}} - {{constructor.constructorId(constructor.name)}}
+  {{cost.id()}} - {{cost.constructor.constructorId(constructor.name)}}
 </b>
+<ul{{1 === cost.level() ? '' : ' hidden'}} level='{{cost.level()}}'>
+  <li:t repeat='name in cost.unsatisfiedBranches()' unique-id='{{cost.uniqueId}}' name='{{name}}'>
+    {{name}}
+  </li:t>
+</ul>
