--- a/services/cabinet/public/html/templates/managers/cost/types/material.html
+++ b/services/cabinet/public/html/templates/managers/cost/types/material.html
@@ -1,4 +1,4 @@
-<div>
+<div cost-id='{{cost.uniqueId()}}'>
   <b>Material</b>
   <span{{cost.length() === undefined ? ' hidden' : ''}}>
   <input value='{{cost.length()}}'>
