--- a/services/cabinet/public/html/templates/managers/cost/types/select.html
+++ b/services/cabinet/public/html/templates/managers/cost/types/select.html
@@ -1,7 +1,7 @@
-<div>
+<div cost-id='{{cost.uniqueId()}}'>
   <b>Select</b>
   <div>
     {{CostManager.selectInput(cost).html()}}
   </div>
-  <div id='{{parentId}}'>{{expandList.html()}}</div>
+  <div>{{expandList.html()}}</div>
 </div>
