--- a/services/cabinet/public/html/templates/properties/config-body.html
+++ b/services/cabinet/public/html/templates/properties/config-body.html
@@ -1,4 +1,4 @@
 <div:t class='property-cnt' repeat='property in properties'>
   <label>{{property.name()}}</label>
-  <input type="text" prop-update='{{property.id}}' name="{{key}}" value="{{property.standard()}}">
+  <input type="text" prop-value-update='{{property.id()}}' value="{{property.standard()}}">
 </div:t>
