almost completed configuration interface, ran into mystery bug going to undo changes until issue resovleves its self.

--- a/public/html/templates/expandable/list.html
+++ b/public/html/templates/expandable/list.html
@@ -12,5 +12,5 @@
     </div>
   </div:t>
   <div class='expand-input-cnt' hidden>{{inputHtml()}}</div>
-  <div class='input-open-cnt'><br>Add {{listElemLable()}}<br><br></div>
+  <div class='input-open-cnt'><button>Add {{listElemLable()}}</button></div>
 </div>
