--- a/services/cabinet/public/html/templates/properties/config-body.html
+++ b/services/cabinet/public/html/templates/properties/config-body.html
@@ -1,4 +1,11 @@
-<div:t class='property-cnt' repeat='property in properties'>
-  <label>{{property.name()}}</label>
-  <input type="text" prop-value-update='{{property.id()}}' value="{{property.standard()}}">
-</div:t>
+<div>
+  <div:t class='property-cnt' repeat='property in properties'>
+    <label>{{property.name()}}</label>
+    <input type="text" prop-value-update='{{property.id()}}' value="{{property.display()}}"
+    measurement-id='{{property.measurementId()}}'>
+  </div:t>
+  <button class='save-change' properties-id='{{properties._ID}}'
+          {{changed(properties._ID) ? '' : ''}}>
+    Save
+  </button>
+</div>
