saving config works. need to rewrite config gui to intuitively work with config format

--- a/public/html/templates/expandable/input-repeat.html
+++ b/public/html/templates/expandable/input-repeat.html
@@ -8,7 +8,7 @@
   </span:t>
   <button ex-list-id='{{id()}}' class='expandable-list-add-btn'
         {{hideAddBtn ? 'hidden' : ''}}>
-    Add {{listElemLable()}}
+    Add {{listElemLable()}} here
   </button>
   <div class='error' id='{{ERROR_CNT_ID}}'></div>
 </div>
