--- a/services/cabinet/public/html/templates/properties/config-body.html
+++ b/services/cabinet/public/html/templates/properties/config-body.html
@@ -5,7 +5,7 @@
     measurement-id='{{property.measurementId()}}'>
   </div:t>
   <button class='save-change' properties-id='{{properties._ID}}'
-          {{changed(properties._ID) ? '' : ''}}>
+          {{changed(properties._ID) ? '' : 'hidden'}}>
     Save
   </button>
 </div>
