--- a/services/cabinet/public/html/templates/managers/cost/body.html
+++ b/services/cabinet/public/html/templates/managers/cost/body.html
@@ -1,3 +1,3 @@
-<div class='{{instance.CostManager.cntClass}}' >
-  {{instance.CostManager.costTypeHtml(instance.cost, instance)}}
+<div class="{{manager.constructor.cntClass}}">
+  {{manager.costTypeHtml(instance.cost, instance)}}
 </div>
