--- a/public/html/templates/expandable/list.html
+++ b/public/html/templates/expandable/list.html
@@ -1,13 +1,13 @@
 
 <div class="expandable-list {{type()}}" ex-list-id='{{id()}}'>
-  <div:t repeat='item in list()' class="expandable-list-body"  index='{{$index}}'>
+  <div:t repeat='key, item in list()' class="expandable-list-body"  key='{{$index || $key}}'>
     <div class="expand-item">
-      <button class='expandable-item-rm-btn' ex-list-id='{{id()}}' index='{{$index}}'>X</button>
-      <div class="expand-header {{type()}}"  ex-list-id='{{id()}}' index='{{$index}}'>
-        {{getHeader(item, $index)}}
+      <button class='expandable-item-rm-btn' ex-list-id='{{id()}}' key='{{key || $index}}'>X</button>
+      <div class="expand-header {{type()}}"  ex-list-id='{{id()}}' key='{{key || $index}}'>
+        {{getHeader(item, $index || $key)}}
       </div>
-      <div class="expand-body {{type()}}"  ex-list-id='{{id()}}' index='{{$index}}'>
-        {{getBody(item, $index)}}
+      <div class="expand-body {{type()}}"  ex-list-id='{{id()}}' key='{{key || $index}}'>
+        {{getBody(item, $index || $key)}}
       </div>
     </div>
   </div:t>
