--- a/public/html/templates/expandable/sidebar.html
+++ b/public/html/templates/expandable/sidebar.html
@@ -1,14 +1,14 @@
 
 <div class="expandable-list {{type()}}" ex-list-id='{{id()}}'>
   <div class="expand-list-cnt {{type()}}" ex-list-id='{{id()}}'>
-    <div:t repeat='item in list()' class="expandable-list-body"  index='{{$index}}'>
+    <div:t repeat='item in list()' class="expandable-list-body"  key='{{$index || $key}}'>
       <div class="expand-item">
         <div class='expand-rm-btn-cnt'>
-          <button class='expandable-item-rm-btn' ex-list-id='{{id()}}' index='{{$index}}'>X</button>
+          <button class='expandable-item-rm-btn' ex-list-id='{{id()}}' key='{{$index || $key}}'>X</button>
         </div>
-        <div class="expand-header {{type()}} {{$index === activeIndex ? ' active' : ''}}"
-                ex-list-id='{{id()}}' index='{{$index}}'>
-          {{getHeader(item, $index)}}
+        <div class="expand-header {{type()}} {{($index || $key) === activeKey ? ' active' : ''}}"
+                ex-list-id='{{id()}}' index='{{$index || $key}}'>
+          {{getHeader(item, $index || $key)}}
         </div>
       </div>
     </div:t>
