--- a/services/cabinet/public/html/templates/managers/cost/body.html
+++ b/services/cabinet/public/html/templates/managers/cost/body.html
@@ -1,3 +1,3 @@
-<div class="{{manager.constructor.cntClass}}">
+<div class="{{manager.constructor.cntClass}}" here-i-am='true'>
   {{manager.costTypeHtml(instance.cost, instance)}}
 </div>
