logic and decision tree is largly tested and working

--- a/public/html/templates/input/decision/decisionTree.html
+++ b/public/html/templates/input/decision/decisionTree.html
@@ -1,5 +1,5 @@
 <div class='{{class}}' tree-id='{{treeId}}'>
-  {{payload.html()}}
+  {{payload().html()}}
   <button class='{{buttonClass}}' tree-id='{{treeId}}'
         {{formFilled() ? '' : 'disabled'}}>
     {{name}}
