DecisionTree successfully refactored gui is starting to work next step is wide scope changes to the cabinet building algorythm

--- a/public/html/templates/expandable/pill.html
+++ b/public/html/templates/expandable/pill.html
@@ -1,21 +1,22 @@
 
 <div class="expandable-list {{type()}}" ex-list-id='{{id()}}'>
   <div class="expand-list-cnt {{type()}}" ex-list-id='{{id()}}'>
-    <div:t repeat='item in list()' class="expandable-list()-body"  key='{{$index || $key}}'>
+    <div:t repeat='key, item in list()' class="expandable-list-body"  key='{{key}}'>
       <div class="expand-item">
         <div class='expand-rm-btn-cnt'>
-          <button class='expandable-item-rm-btn' ex-list()-id='{{id()}}' key='{{$index || $key}}'>X</button>
+          <button class='expandable-item-rm-btn' ex-list-id='{{id()}}' key='{{key}}'>X</button>
         </div>
-        <div class="expand-header {{type()}}" ex-list()-id='{{id()}}' key='{{$index || $key}}'>
-          {{getHeader(item, $index || $key)}}
+        <div class="expand-header {{type()}}" ex-list-id='{{id()}}' key='{{key}}'>
+          {{getHeader(item, key)}}
         </div>
       </div>
     </div:t>
+    <div class='input-open-cnt'><button>Add {{listElemLable()}}</button></div>
   </div>
   <div>
     <div class='expand-input-cnt' hidden>{{inputHtml()}}</div>
     <br>
-    <div class='error' id='{{ERROR_CNT_ID}}'></div>
+    <div class='error' id='{{ERROR_CNT_ID()}}'></div>
   </div>
   <div class="expand-body {{type()}}"></div>
 </div>
