--- a/public/html/templates/input/decision/decisionTree.html
+++ b/public/html/templates/input/decision/decisionTree.html
@@ -1,7 +1,6 @@
-<div class='{{class}}' tree-id='{{treeId}}'>
-  {{payload().html()}}
-  <button class='{{buttonClass}}' tree-id='{{treeId}}'
-        {{formFilled() ? '' : 'disabled'}}>
-    {{name}}
+<div class='{{DecisionInputTree.class}}' root-id='{{wrapper.nodeId()}}'>
+  {{inputHtml}}
+  <button class='{{DecisionInputTree.buttonClass}}' root-id='{{wrapper.nodeId()}}''>
+    {{wrapper.node.name}}
   </button>
 </div>
