I think html to pdf formatting fixed weather-fax

--- a/services/weather-fax/public/html/templates/order-form.html
+++ b/services/weather-fax/public/html/templates/order-form.html
@@ -129,7 +129,7 @@
         <td class='toggle-cnt types'>
           <span class='pointer' style="text-decoration: line-through;">Hourly</span>
           <span class='pointer' style="text-decoration: line-through;">Daily</span>
-          <span class='pointer' sending='true'>Both</span>
+          <span class='pointer' sending='true'>15 Hour and Daily</span>
         </td>
       </tr:t>
   </table>
