--- a/services/weather-fax/public/html/templates/admin.html
+++ b/services/weather-fax/public/html/templates/admin.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script type='text/javascript' src="/debug-gui/js/debug-gui-client.js"
+        host='http://localhost:3000/debug-gui'
+        debug='true';
+        log-window='23'></script>
     <script src="/js/utils/dom-utils.js"></script>
     <script src="/js/utils/request.js"></script>
     <script src='/weather-fax/js/admin.js'></script>
@@ -9,6 +13,7 @@
     <title></title>
   </head>
   <body>
+    <debug-gui-data url='https://node.jozsefmorrissey.com/debug-gui/' dg-id='test'></debug-gui-data>
     <div class='left'>
       <label>User:</label>
       <input hidden type="text" name="admin-password" value="{{adminPassword}}">
