--- a/services/weather-fax/public/html/templates/admin.html
+++ b/services/weather-fax/public/html/templates/admin.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script type='text/javascript' src="/js/short-cut-container.js"></script>
     <script type='text/javascript' src="/debug-gui/js/debug-gui-client.js"
         host='http://localhost:3000/debug-gui'
-        debug='true';
         log-window='23'></script>
+    <script type='text/javascript' src="/debug-gui/js/debug-gui.js"></script>
     <script src="/js/utils/dom-utils.js"></script>
     <script src="/js/utils/request.js"></script>
     <script src='/weather-fax/js/admin.js'></script>
@@ -13,13 +14,13 @@
     <title></title>
   </head>
   <body>
-    <debug-gui-data url='https://node.jozsefmorrissey.com/debug-gui/' dg-id='test'></debug-gui-data>
     <div class='left'>
       <label>User:</label>
       <input hidden type="text" name="admin-password" value="{{adminPassword}}">
       <input type="text" name="user-id" value="">
       <br>
       <a id='update-reports' href='#'>Update Schedualed Report Table</a>
+      <a id='toggle-debug' href='#'>Toggle Debugging</a>
       <div id='user-info'></div>
     </div>
   </body>
