--- a/services/cabinet/public/styles/estimate.css
+++ b/services/cabinet/public/styles/estimate.css
@@ -4,6 +4,11 @@
     color: red;
 }
 
+canvas {
+  border-style: groove;
+  background-color: whitesmoke;
+}
+
 .information-bar {
   position: fixed;
   top: 0;
