--- a/services/cabinet/public/html/templates/2d/pop-up/line-measurement-2d.html
+++ b/services/cabinet/public/html/templates/2d/pop-up/line-measurement-2d.html
@@ -6,5 +6,5 @@
           {{property.value() === true ? 'checked' : ''}}>
   </span:t>
   <br>
-  <input type='text' class='measurment-mod' value='{{target.display()}}'>
+  <input type='text' class='measurement-mod' value='{{target.display()}}'>
 </div>
