Finally finished translating 3d model into 2d three-view, my computer has been crashing probably need to save more often

--- a/services/cabinet/public/html/templates/index.html
+++ b/services/cabinet/public/html/templates/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/styles/expandable-list.css">
     <link rel="stylesheet" href="/cabinet/styles/estimate.css">
     <script src="/js/utility-filter.js" run-type='auto'></script>
-    <title>Estimate{{bolux}}gege</title>
+    <title>Estimate</title>
   </head>
   <body>
     <button id='menu-btn'>&#8801;</button>
