--- a/services/cabinet/public/html/templates/three-view.html
+++ b/services/cabinet/public/html/templates/three-view.html
@@ -1,8 +1,8 @@
 <div class='three-view-cnt' id='{{id()}}'>
   <div class='three-view-three-d-cnt'></div>
   <div class='three-view-two-d-cnt'>
-    <div id='three-view-canvases-cnt' class='inline-flex'>
-      <div class='center-vert'><h3 id='three-view-part-code-{{id()}}'></h3></div>
+    <div class='three-view-canvases-cnt inline-flex'>
+      <div class='center-vert'>Part Code: <b id='three-view-part-code-{{id()}}'></b></div>
       <span class='three-view-canvas-cnt'>
         <b>Top</b>
         <canvas id="three-view-top" width="300" height="300"></canvas>
